--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "elm-hot": "^1.1.5"
+    "elm-hot": "^1.1.5",
+    "node-forge": ">=0.10.0"
   }
 }
